# webcamoid

./: .bintray.js  .cirrus.yml  .gitignore  .gitmodules  .travis.yml  .weblate  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  FUNDING.yml  ISSUE_TEMPLATE.md  Lib.pro  PRIVACY_POLICY.md  PULL_REQUEST_TEMPLATE.md  Plasmoid.pro  README.markdown  README.md  SECURITY.md  StandAlone.pro  THANKS  TODO  Webcamoid.desktop  Webcamoid.nja  Webcamoid.pro  Webcamoid.qdocconf  Webcamoid.qrc  appveyor.yml  cmake_uninstall.cmake.in  commons.pri  icons.qrc  io.github.webcamoid.Webcamoid.metainfo.xml  io.github.webcamoid.metainfo.xml  lgtm.yml  listdevs.sh  metadata.desktop  package_info.conf.in  package_info_android.conf.in  package_info_windows.conf.in  (+10 more)
StandAlone/ManPages/: CMakeLists.txt
StandAlone/ManPages/src/: webcamoid.1.in
StandAlone/Translations/: CMakeLists.txt
StandAlone/java/: CMakeLists.txt
StandAlone/src/: CMakeLists.txt  android_values_appid.xml  audioinputs.cpp  audioinputs.h  audiolayer.cpp  audiolayer.h  audiooutputs.cpp  audiooutputs.h  clioptions.cpp  clioptions.h  downloadmanager.cpp  downloadmanager.h  iconsprovider.cpp  iconsprovider.h  localstreaming.cpp  localstreaming.h  main.cpp  mediasource.cpp  mediasource.h  mediatools.cpp  mediatools.h  pluginconfigs.cpp  pluginconfigs.h  recording.cpp  recording.h  recordingformat.h  streaming.cpp  streaming.h  updates.cpp  updates.h  videodisplay.cpp  videodisplay.h  videoeffects.cpp  videoeffects.h  videoframe.cpp  videoframe.h  videolayer.cpp  videolayer.h  virtualcameras.cpp  virtualcameras.h
StandAlone/src/ffmpeg/: cfwinfo.cpp  ffmpeg.pri
StandAlone/src/gstreamer/: cfwinfo.cpp  cfwinfo.h  gstreamer.pri
libAvKys/Lib/: AvKys.qrc  CMakeLists.txt  Lib.pro
libAvKys/Lib/src/: ak.cpp  ak.h  akalgorithm.h  akaudiocaps.cpp  akaudiocaps.h  akaudioconverter.cpp  akaudioconverter.h  akaudioencoder.cpp  akaudioencoder.h  akaudiomixer.cpp  akaudiomixer.h  akaudiopacket.cpp  akaudiopacket.h  akcaps.cpp  akcaps.h  akcolorcomponent.cpp  akcolorcomponent.h  akcolorconvert.cpp  akcolorconvert.h  akcolorizedimage.cpp  akcolorizedimage.h  akcolorplane.cpp  akcolorplane.h  akcommons.h  akcompressedaudiocaps.cpp  akcompressedaudiocaps.h  akcompressedaudiopacket.cpp  akcompressedaudiopacket.h  akcompressedcaps.cpp  akcompressedcaps.h  akcompressedpacket.cpp  akcompressedpacket.h  akcompressedvideocaps.cpp  akcompressedvideocaps.h  akcompressedvideopacket.cpp  akcompressedvideopacket.h  akcpufeatures.cpp  akcpufeatures.h  akelement.cpp  akelement.h  (+46 more)
libAvKys/Plugins/: CMakeLists.txt  Plugins.pro
libAvKys/Plugins/ACapsConvert/: ACapsConvert.pro  CMakeLists.txt  pspec.json
libAvKys/Plugins/AdjustHSL/: AdjustHSL.qrc  CMakeLists.txt  pspec.json
libAvKys/Plugins/Aging/: Aging.pro  CMakeLists.txt  pspec.json  translations.qrc
libAvKys/Plugins/AnalogTV/: AnalogTV.qrc  CMakeLists.txt  pspec.json
libAvKys/Plugins/AspectRatio/: AspectRatio.qrc  CMakeLists.txt  pspec.json
libAvKys/Plugins/AudioDevice/: AudioDevice.pro  CMakeLists.txt  pspec.json  pspecsource.json
libAvKys/Plugins/AudioGen/: AudioGen.pro  CMakeLists.txt  pspec.json
libAvKys/Plugins/AudioInput/: AudioInput.pro
libAvKys/Plugins/AudioOutput/: AudioOutput.pro
libAvKys/Plugins/Blur/: Blur.pro  Blur.qrc  CMakeLists.txt  pspec.json  translations.qrc
libAvKys/Plugins/Cartoon/: CMakeLists.txt  Cartoon.pro  pspec.json  translations.qrc
libAvKys/Plugins/ChangeHSL/: CMakeLists.txt  ChangeHSL.pro  ChangeHSL.qrc  pspec.json  translations.qrc
libAvKys/Plugins/Charify/: CMakeLists.txt  Charify.pro  Charify.qrc  pspec.json  translations.qrc
libAvKys/Plugins/Cinema/: CMakeLists.txt  Cinema.pro  Cinema.qrc  pspec.json  translations.qrc
libAvKys/Plugins/Codecs/: CMakeLists.txt
libAvKys/Plugins/ColorFilter/: CMakeLists.txt  ColorFilter.pro  pspec.json  translations.qrc
libAvKys/Plugins/ColorKey/: CMakeLists.txt  ColorKey.qrc  pspec.json
libAvKys/Plugins/ColorReplace/: CMakeLists.txt  ColorReplace.pro  ColorReplace.qrc  pspec.json  translations.qrc
libAvKys/Plugins/ColorTap/: CMakeLists.txt  ColorTap.pro  ColorTap.qrc  pspec.json  translations.qrc
libAvKys/Plugins/ColorTransform/: CMakeLists.txt  ColorTransform.pro  ColorTransform.qrc  pspec.json  translations.qrc
libAvKys/Plugins/Contrast/: CMakeLists.txt  Contrast.qrc  pspec.json
libAvKys/Plugins/Convolve/: CMakeLists.txt  Convolve.pro  pspec.json  translations.qrc
libAvKys/Plugins/Crop/: CMakeLists.txt  Crop.qrc  pspec.json
libAvKys/Plugins/DelayGrab/: CMakeLists.txt  DelayGrab.pro  pspec.json  translations.qrc
libAvKys/Plugins/Denoise/: CMakeLists.txt  Denoise.pro  pspec.json  translations.qrc
libAvKys/Plugins/DesktopCapture/: CMakeLists.txt  DesktopCapture.pro  pspec.json  translations.qrc
libAvKys/Plugins/Dice/: CMakeLists.txt  Dice.pro  Dice.qrc  pspec.json  translations.qrc
libAvKys/Plugins/Distort/: CMakeLists.txt  Distort.pro  Distort.qrc  pspec.json  translations.qrc
libAvKys/Plugins/Dizzy/: CMakeLists.txt  Dizzy.pro  Dizzy.qrc  pspec.json  translations.qrc
libAvKys/Plugins/Edge/: CMakeLists.txt  Edge.pro  Edge.qrc  pspec.json  translations.qrc
libAvKys/Plugins/Emboss/: CMakeLists.txt  Emboss.pro  Emboss.qrc  pspec.json  translations.qrc
libAvKys/Plugins/Equalize/: CMakeLists.txt  Equalize.pro  pspec.json
libAvKys/Plugins/FaceDetect/: CMakeLists.txt  FaceDetect.pro  FaceDetect.qrc  haarcascades.qrc  masks.qrc  pspec.json  translations.qrc
libAvKys/Plugins/FaceTrack/: CMakeLists.txt  FaceTrack.pro  FaceTrack.qrc  pspec.json
libAvKys/Plugins/FalseColor/: CMakeLists.txt  FalseColor.pro  FalseColor.qrc  pspec.json  translations.qrc
libAvKys/Plugins/FillAudioGaps/: CMakeLists.txt  pspec.json
libAvKys/Plugins/Fire/: CMakeLists.txt  Fire.pro  Fire.qrc  pspec.json  translations.qrc
libAvKys/Plugins/Flip/: CMakeLists.txt  Flip.pro  Flip.qrc  pspec.json
libAvKys/Plugins/FpsControl/: CMakeLists.txt  FpsControl.qrc  pspec.json
libAvKys/Plugins/FrameOverlap/: CMakeLists.txt  FrameOverlap.pro  pspec.json  (+1 more)
libAvKys/Tests/: CMakeLists.txt  tests.pri
(+4640 files in other folders)
